--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "polymer": "Polymer/polymer#~0.4.0",
     "core-elements": "Polymer/core-elements#~0.4.0",
-    "paper-elements": "Polymer/paper-elements#~0.4.0"
+    "paper-elements": "Polymer/paper-elements#~0.4.0",
+    "paper-input": "Polymer/paper-input#~0.4.0"
   }
 }
